# lighter-rust

./: Cargo.toml  build.rs  update_libs.sh
libs/: README.md
libs/darwin/arm64/: lighter-signer-darwin-arm64.dylib
src/: config.rs
src/api/: account.rs
src/client/: http.rs
src/signer/: data.rs  ffi.rs  mod.rs
