[package]
name = "lighter-rust"
version = "0.2.1"
edition = "2021"
description = "A comprehensive Rust SDK for the Lighter trading platform with async/await, WebSocket support, and Ethereum wallet integration"
license = "MIT"
repository = "https://github.com/yongkangc/lighter-rust"
homepage = "https://github.com/yongkangc/lighter-rust"
documentation = "https://docs.rs/lighter-rust"
readme = "README.md"
authors = ["yongkangc", "gnapoli23"]
keywords = ["trading", "crypto", "lighter", "sdk", "defi"]
categories = [
    "api-bindings",
    "web-programming::http-client",
    "cryptography::cryptocurrencies",
]
exclude = [
    ".github/",
    ".openapi-generator/",
    "CLAUDE.md",
    ".gitignore",
    "*.swp",
    "*.swo",
    "*~",
    ".DS_Store",
    "libs/",
    "patches/",
    "openapi.json",
    "build.rs",
    "justfile",
    "git_push.sh",
    "Dockerfile",
    "docs/",
    "spec.md",
    ".travis.yml",
]

[build-dependencies]
bindgen = "0.72.1"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
alloy = { version = "1.0", features = [
    "signers",
    "signer-local",
    "rpc-types",
    "json-rpc",
] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
futures = "0.3"
tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
#tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
libc = "0.2"
reqwest-middleware = { version = "0.4.2", features = ["multipart"] }
reqwest-retry = "0.7.0"
strum = { version = "0.27.2", features = ["strum_macros"] }
secrecy = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"

[features]
default = []
